# snakegame-cpp

./: .gitignore  CMakeLists.txt  main.cpp
director/: Direction.h  Screen.cpp  Screen.h
entity/: Fruit.cpp  Fruit.h  Player.cpp  Player.h  Snake.cpp  Snake.h
levels/: Level.cpp  Level.h  Level01.cpp  Level01.h
maps/: Texture.cpp  Texture.h
